--- a/lms/templates/seq_module.html
+++ b/lms/templates/seq_module.html
@@ -12,7 +12,7 @@
       </div>
     </div>
   % endif
-  <div class="sequence-nav">
+  <div class="sequence-nav" style="justify-content: center;">
     <button class="sequence-nav-button button-previous" aria-hidden="true">
       <span class="icon fa fa-chevron-prev" aria-hidden="true"></span>
       <span>${_('Previous')}</span>
